name:                heed-backend
version:             0.2.0.0
synopsis:            Backend for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable heed-backend
  main-is:             Main.hs
  build-depends:       base == 4.9.*
                     , heed-backend
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -O -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates


library
  exposed-modules:     Heed
                     , Heed.Crypto
                     , Heed.Extract
                     , Heed.Query
                     , Heed.Server
  build-depends:       base == 4.9.*
                     , broadcast-chan >=0.1.1
                     , bytestring >=0.10.8.1
                     , cryptonite >=0.21
                     , exceptions >=0.8.3
                     , fast-logger >=2.4
                     , feed >=0.3.12.0
                     , heed-lib >=0.1.0.0
                     , html-entities >=1.1.2
                     , http-client >=0.5.5
                     , http-client-tls >=0.3.3
                     , http-types >=0.9.1
                     , ini >=0.3.5
                     , iso8601-time >=0.1.4
                     , lens >=4.14
                     , mtl >=2.2.1
                     , mwc-random >=0.13.5.0
                     , opaleye >=0.5.2.2
                     , opaleye-trans >=0.3.4
                     , postgresql-simple >=0.5.2.1
                     , primitive == 0.6.1.0
                     , product-profunctors >=0.7.1.0
                     , safe >=0.3.10
                     , servant >=0.9.1.1
                     , servant-server >=0.9.1.1
                     , slave-thread >=1.0
                     , store >=0.3
                     , tagsoup >=0.14
                     , text >=1.2.2.1
                     , time >=1.6.0.1
                     , vector >=0.12
                     , wai >=3.2.1.1
                     , wai-websockets >=3.0.1.1
                     , warp >=3.2.9
                     , websockets >=0.10.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

Test-Suite heed-backend-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , heed-backend
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -O -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
