name:                heed-backend
version:             0.5.6.0
synopsis:            Backend for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable heed-backend
  main-is:             Main.hs
  build-depends:       base
                     , heed-backend
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -T" -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates


library
  exposed-modules:     Heed
                     , Heed.Crypto
                     , Heed.Extract
                     , Heed.Feed.Atom
                     , Heed.Feed.RSS
                     , Heed.Feed.XML
                     , Heed.Feed.HtmlEntities
                     , Heed.Query
                     , Heed.QueryTest
                     , Heed.Server
                     , Paths_heed_backend
  build-depends:       base
                     , broadcast-chan
                     , bytestring
                     , cereal
                     , containers
                     , cryptonite
                     , directory
                     , exceptions
                     , fast-logger
                     , feed
                     , gitrev
                     , hashable
                     , heed-lib
                     , html-entities
                     , http-client
                     , http-client-tls
                     , http-types
                     , ini
                     , iso8601-time
                     , microlens-platform
                     , mtl
                     , mwc-random
                     , network-uri
                     , opaleye
                     , optparse-applicative
                     , postgresql-simple
                     , product-profunctors
                     , resource-pool
                     , safe
                     , servant
                     , servant-server
                     , slave-thread
                     , stm
                     , tagsoup
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , wai
                     , wai-websockets
                     , wai-middleware-prometheus
                     , warp
                     , websockets
                     , xml-conduit
                     , xml-types
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

Test-Suite heed-backend-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , directory
                     , feed
                     , heed-backend
                     , heed-lib
                     , hspec
                     , iso8601-time
                     , opaleye
                     , process
                     , raw-strings-qq
                     , text
                     , time
                     , xml-conduit
                     , xml-types
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
