name:                heed-frontend
version:             0.1.0.0
synopsis:            Frontend for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable heed-frontend
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
