name:                heed-frontend
version:             0.1.0.0
synopsis:            Frontend for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable heed-frontend
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , bytestring
                     , data-default
                     , heed-lib
                     , lens
                     , lucid
                     , react-flux
                     , reflex
                     , reflex-dom
                     , time
                     , text
                     , vector
                     , weigh
                     , attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  if impl(ghcjs)
      ghc-options:    -dedupe -O -Wall
      cpp-options:    -DGHCJS_BROWSER
  else
      ghc-options:    -Wall -O
