Name:                heed-lib
version:             0.2.0.0
synopsis:            Common library for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Heed.Commands
                     , Heed.Database
                     , Heed.DbEnums
                     , Heed.Orphans
                     , Heed.Types
                     , Heed.Utils
  build-depends:       base ==4.9.*
                     , broadcast-chan >=0.1.1
                     , bytestring >=0.10.8.1
                     , cereal >=0.5
                     , cereal-text >=0.1
                     , exceptions >=0.8.3
                     , fast-logger >=2.4
                     , http-api-data >=0.3.3
                     , http-client >=0.5.5
                     , lens >=4.15.1
                     , mtl >=2.2.1
                     , opaleye >=0.5.2.2
                     , opaleye-trans >=0.3.4
                     , product-profunctors >=0.7.1.0
                     , profunctors >=5.2
                     , postgresql-simple >=0.5.2.1
                     , QuickCheck >=2.9
                     , servant >=0.9.1.1
                     , slave-thread >= 1.0
                     , text >=1.2.2.1
                     , time >=1.6.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
