Name:                heed-lib
version:             0.5.7.0
synopsis:            Common library for the heed rss reader
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Heed.Commands
                     , Heed.Database
                     , Heed.DbEnums
                     , Heed.Orphans
                     , Heed.Types
                     , Heed.Utils
  build-depends:       base
                     , broadcast-chan
                     , bytestring
                     , cereal
                     , cereal-text
                     , containers
                     , exceptions
                     , fast-logger
                     , http-api-data
                     , http-client
                     , QuickCheck
                     , microlens-platform
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , process
                     , product-profunctors
                     , profunctors
                     , resource-pool
                     , servant
                     , slave-thread
                     , stm
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
