name:                heed-vty
version:             0.2.0.0
synopsis:            Show feeds downloaded by heed-backend
description:         Frontend for heed-backend
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable heed-vty
  main-is:             Main.hs
  build-depends:       base == 4.9.*
                     , heed-vty
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -O -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

library
  exposed-modules:     Heed.Vty
                     , Heed.Vty.AddFeedWidget
                     , Heed.Vty.MainWidget
                     , Heed.Vty.WidgetStates
  build-depends:       base ==4.9.*
                     , brick >=0.17
                     , bytestring >=0.10.8.1
                     , containers >=0.5.7
                     , data-default >=0.7.1.1
                     , directory >=1.2.6.2
                     , heed-lib >=0.1.0.0
                     , http-conduit >=2.2.3
                     , ini >=0.3.5
                     , lens >=4.15.1
                     , network >=2.6.3.1
                     , process >=1.4.2.0
                     , text >=1.2.2.1
                     , time >=1.6.0.1
                     , transformers >=0.5.2.0
                     , safe >=0.3.10
                     , slave-thread >=1.0
                     , store >=0.3
                     , store-core >=0.3
                     , uri >=0.1.6.4
                     , vector >=0.12.0.0
                     , vty >=5.15
                     , websockets >=0.10.0.0
                     , wuss >= 1.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
