name:                heed-vty
version:             0.4.0.0
synopsis:            Show feeds downloaded by heed-backend
description:         Frontend for heed-backend
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable heed-vty
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , heed-vty
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

library
  exposed-modules:     Heed.Vty
                     , Heed.Vty.AddFeedWidget
                     , Heed.Vty.EditFeedWidget
                     , Heed.Vty.MainWidget
                     , Heed.Vty.WidgetStates
                     , Paths_heed_vty
  build-depends:       base >=4.9
                     , ansi-wl-pprint >= 0.6
                     , brick >=0.36
                     , bytestring >=0.10.8.1
                     , cereal >=0.5
                     , containers >=0.5.7
                     , data-default >=0.7.1.1
                     , directory >=1.2.6.2
                     , gitrev >=1.0
                     , heed-lib >=0.1.0.0
                     , http-conduit >=2.2.3
                     , ini >=0.3.5
                     , lens >=4.15.1
                     , monad-loops >=0.4
                     , network >=2.6.3.1
                     , optparse-applicative >=0.12
                     , process >=1.4
                     , text >=1.2.2.1
                     , time >=1.6.0.1
                     , transformers >=0.5.2.0
                     , safe >=0.3.10
                     , slave-thread >=1.0
                     , uri >=0.1.6.4
                     , vector >=0.11.0.0
                     , vty >=5.15
                     , websockets >=0.11
                     , wuss >= 1.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

Test-Suite heed-vty-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , brick >=0.36
                     , heed-lib
                     , heed-vty
                     , hspec >=2.3
                     , lens >=4.15.1
                     , quickcheck-instances >=0.3
                     , QuickCheck >=2.9
                     , vector >=0.11.0.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
