name:                heed-vty
version:             0.5.9.0
synopsis:            Show feeds downloaded by heed-backend
description:         Frontend for heed-backend
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable heed-vty
  main-is:             Main.hs
  build-depends:       base
                     , heed-vty
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

library
  exposed-modules:     Heed.Vty
                     , Heed.Vty.AddFeedWidget
                     , Heed.Vty.EditFeedWidget
                     , Heed.Vty.MainWidget
                     , Heed.Vty.WidgetStates
                     , Paths_heed_vty
  build-depends:       base
                     , ansi-wl-pprint
                     , brick
                     , bytestring
                     , cereal
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , gitrev
                     , heed-lib
                     , http-conduit
                     , ini
                     , microlens-platform
                     , monad-loops
                     , network
                     , optparse-applicative
                     , process
                     , text
                     , time
                     , transformers
                     , safe
                     , slave-thread
                     , uri
                     , vector
                     , vty
                     , websockets
                     , wuss
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

Test-Suite heed-vty-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , brick
                     , heed-lib
                     , heed-vty
                     , hspec
                     , microlens-platform
                     , quickcheck-instances
                     , QuickCheck
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
